fix: event modal too small

--- a/src/jelu-ui/src/assets/style.css
+++ b/src/jelu-ui/src/assets/style.css
@@ -153,6 +153,7 @@
 
 .event-modal {
   margin: 30px;
+  height: min(600px, 70vh);
 }
 
 .author-modal {
